[metadata]
name = balaland
version = 1.0
author = Oriol Alfonso
author-email = oriolalfonso91@gmail.com
summary = 2D Shooter made with PyGame
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://oalfonso.com
project_urls =
    Source Code = https://github.com/oalfonso-o/balaland
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Casual Gamers
    Operating System :: OS Independent
    Programming Language :: Python3.8

[files]
packages =
    balaland
data_files =
    maps = balaland/maps/*
    '' = balaland/.env

[entry_points]
console_scripts =
    balaland = balaland.play:play